fix(calendar): z-index

--- a/src/modules/calendar/calendar.css
+++ b/src/modules/calendar/calendar.css
@@ -1,5 +1,5 @@
 #logseq-agenda_lsp_main#logseq-agenda_lsp_main {
-    z-index: 1 !important;
+    z-index: 2 !important;
     width: calc(100% - var(--ls-left-sidebar-width) - var(--awUI-calc-right-sidebar-width));
     height: calc(100% - var(--awUI-tabs-height) - var(--awUI-head-height))!important;
     left: var(--ls-left-sidebar-width);
